src/parser/.antlr/BveMapParser.java
// Generated from /home/nemo/cpp/bmets/src/parser/BveMapParser.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class BveMapParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LeftParen=1, RightParen=2, LeftBracket=3, RightBracket=4, LeftBrace=5, 
		RightBrace=6, Less=7, LessEqual=8, Greater=9, GreaterEqual=10, Equal=11, 
		NotEqual=12, Plus=13, Minus=14, Star=15, Div=16, Mod=17, And=18, Or=19, 
		AndAnd=20, OrOr=21, Not=22, Dot=23, Semi=24, Comma=25, Assign=26, Null=27, 
		Include=28, Distance=29, If=30, Else=31, For=32, While=33, Long=34, Function=35, 
		Identifier=36, Variable=37, Number=38, Whitespace=39, Comment=40, StringLiteral=41, 
		DoubleQuote=42, ErrorChar=43;
	public static final int
		RULE_root = 0, RULE_stmt = 1, RULE_stmtList = 2, RULE_includeStmt = 3, 
		RULE_distStmt = 4, RULE_mapStmt = 5, RULE_assignStmt = 6, RULE_ifStmt = 7, 
		RULE_forStmt = 8, RULE_whileStmt = 9, RULE_fnDefStmt = 10, RULE_paramList = 11, 
		RULE_paramDefList = 12, RULE_codeBlock = 13, RULE_expr = 14;
	private static String[] makeRuleNames() {
		return new String[] {
			"root", "stmt", "stmtList", "includeStmt", "distStmt", "mapStmt", "assignStmt", 
			"ifStmt", "forStmt", "whileStmt", "fnDefStmt", "paramList", "paramDefList", 
			"codeBlock", "expr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "'['", "']'", "'{'", "'}'", "'<'", "'<='", "'>'", 
			"'>='", "'=='", "'!='", "'+'", "'-'", "'*'", "'/'", "'%'", "'&'", "'|'", 
			"'&&'", "'||'", "'!'", "'.'", "';'", "','", "'='", null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"'\"'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "LeftParen", "RightParen", "LeftBracket", "RightBracket", "LeftBrace", 
			"RightBrace", "Less", "LessEqual", "Greater", "GreaterEqual", "Equal", 
			"NotEqual", "Plus", "Minus", "Star", "Div", "Mod", "And", "Or", "AndAnd", 
			"OrOr", "Not", "Dot", "Semi", "Comma", "Assign", "Null", "Include", "Distance", 
			"If", "Else", "For", "While", "Long", "Function", "Identifier", "Variable", 
			"Number", "Whitespace", "Comment", "StringLiteral", "DoubleQuote", "ErrorChar"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "BveMapParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public BveMapParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class RootContext extends ParserRuleContext {
		public StmtListContext stmtList() {
			return getRuleContext(StmtListContext.class,0);
		}
		public TerminalNode EOF() { return getToken(BveMapParser.EOF, 0); }
		public RootContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_root; }
	}

	public final RootContext root() throws RecognitionException {
		RootContext _localctx = new RootContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_root);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(30);
			stmtList();
			setState(31);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtContext extends ParserRuleContext {
		public MapStmtContext mapStmt() {
			return getRuleContext(MapStmtContext.class,0);
		}
		public DistStmtContext distStmt() {
			return getRuleContext(DistStmtContext.class,0);
		}
		public AssignStmtContext assignStmt() {
			return getRuleContext(AssignStmtContext.class,0);
		}
		public IncludeStmtContext includeStmt() {
			return getRuleContext(IncludeStmtContext.class,0);
		}
		public IfStmtContext ifStmt() {
			return getRuleContext(IfStmtContext.class,0);
		}
		public ForStmtContext forStmt() {
			return getRuleContext(ForStmtContext.class,0);
		}
		public WhileStmtContext whileStmt() {
			return getRuleContext(WhileStmtContext.class,0);
		}
		public FnDefStmtContext fnDefStmt() {
			return getRuleContext(FnDefStmtContext.class,0);
		}
		public CodeBlockContext codeBlock() {
			return getRuleContext(CodeBlockContext.class,0);
		}
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stmt);
		try {
			setState(42);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(33);
				mapStmt();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(34);
				distStmt();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(35);
				assignStmt();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(36);
				includeStmt();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(37);
				ifStmt();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(38);
				forStmt();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(39);
				whileStmt();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(40);
				fnDefStmt();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(41);
				codeBlock();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtListContext extends ParserRuleContext {
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public List<TerminalNode> Semi() { return getTokens(BveMapParser.Semi); }
		public TerminalNode Semi(int i) {
			return getToken(BveMapParser.Semi, i);
		}
		public StmtListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmtList; }
	}

	public final StmtListContext stmtList() throws RecognitionException {
		StmtListContext _localctx = new StmtListContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_stmtList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LeftParen) | (1L << LeftBrace) | (1L << Plus) | (1L << Minus) | (1L << Not) | (1L << Null) | (1L << Include) | (1L << Distance) | (1L << If) | (1L << For) | (1L << While) | (1L << Function) | (1L << Identifier) | (1L << Variable) | (1L << Number) | (1L << StringLiteral))) != 0)) {
				{
				{
				setState(44);
				stmt();
				setState(46); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(45);
					match(Semi);
					}
					}
					setState(48); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==Semi );
				}
				}
				setState(54);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IncludeStmtContext extends ParserRuleContext {
		public TerminalNode Include() { return getToken(BveMapParser.Include, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public IncludeStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_includeStmt; }
	}

	public final IncludeStmtContext includeStmt() throws RecognitionException {
		IncludeStmtContext _localctx = new IncludeStmtContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_includeStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			match(Include);
			setState(56);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DistStmtContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public DistStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_distStmt; }
	}

	public final DistStmtContext distStmt() throws RecognitionException {
		DistStmtContext _localctx = new DistStmtContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_distStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MapStmtContext extends ParserRuleContext {
		public Token elem1;
		public Token func;
		public ParamListContext params;
		public ExprContext key1;
		public Token elem2;
		public List<TerminalNode> Identifier() { return getTokens(BveMapParser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(BveMapParser.Identifier, i);
		}
		public List<TerminalNode> Dot() { return getTokens(BveMapParser.Dot); }
		public TerminalNode Dot(int i) {
			return getToken(BveMapParser.Dot, i);
		}
		public TerminalNode LeftParen() { return getToken(BveMapParser.LeftParen, 0); }
		public TerminalNode RightParen() { return getToken(BveMapParser.RightParen, 0); }
		public TerminalNode LeftBracket() { return getToken(BveMapParser.LeftBracket, 0); }
		public TerminalNode RightBracket() { return getToken(BveMapParser.RightBracket, 0); }
		public ParamListContext paramList() {
			return getRuleContext(ParamListContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public MapStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mapStmt; }
	}

	public final MapStmtContext mapStmt() throws RecognitionException {
		MapStmtContext _localctx = new MapStmtContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_mapStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			((MapStmtContext)_localctx).elem1 = match(Identifier);
			setState(85);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Dot:
				{
				{
				setState(61);
				match(Dot);
				setState(62);
				((MapStmtContext)_localctx).func = match(Identifier);
				setState(63);
				match(LeftParen);
				setState(64);
				((MapStmtContext)_localctx).params = paramList();
				setState(65);
				match(RightParen);
				}
				}
				break;
			case LeftBracket:
				{
				{
				setState(67);
				match(LeftBracket);
				setState(68);
				((MapStmtContext)_localctx).key1 = expr(0);
				setState(69);
				match(RightBracket);
				setState(70);
				match(Dot);
				setState(83);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
				case 1:
					{
					{
					setState(71);
					((MapStmtContext)_localctx).func = match(Identifier);
					setState(72);
					match(LeftParen);
					setState(73);
					((MapStmtContext)_localctx).params = paramList();
					setState(74);
					match(RightParen);
					}
					}
					break;
				case 2:
					{
					{
					setState(76);
					((MapStmtContext)_localctx).elem2 = match(Identifier);
					setState(77);
					match(Dot);
					setState(78);
					((MapStmtContext)_localctx).func = match(Identifier);
					setState(79);
					match(LeftParen);
					setState(80);
					((MapStmtContext)_localctx).params = paramList();
					setState(81);
					match(RightParen);
					}
					}
					break;
				}
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignStmtContext extends ParserRuleContext {
		public TerminalNode Variable() { return getToken(BveMapParser.Variable, 0); }
		public TerminalNode Assign() { return getToken(BveMapParser.Assign, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public AssignStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignStmt; }
	}

	public final AssignStmtContext assignStmt() throws RecognitionException {
		AssignStmtContext _localctx = new AssignStmtContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_assignStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			match(Variable);
			setState(88);
			match(Assign);
			setState(89);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfStmtContext extends ParserRuleContext {
		public ExprContext expr;
		public List<ExprContext> cond = new ArrayList<ExprContext>();
		public CodeBlockContext codeBlock;
		public List<CodeBlockContext> condCode = new ArrayList<CodeBlockContext>();
		public CodeBlockContext elseCode;
		public List<TerminalNode> If() { return getTokens(BveMapParser.If); }
		public TerminalNode If(int i) {
			return getToken(BveMapParser.If, i);
		}
		public List<TerminalNode> LeftParen() { return getTokens(BveMapParser.LeftParen); }
		public TerminalNode LeftParen(int i) {
			return getToken(BveMapParser.LeftParen, i);
		}
		public List<TerminalNode> RightParen() { return getTokens(BveMapParser.RightParen); }
		public TerminalNode RightParen(int i) {
			return getToken(BveMapParser.RightParen, i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<CodeBlockContext> codeBlock() {
			return getRuleContexts(CodeBlockContext.class);
		}
		public CodeBlockContext codeBlock(int i) {
			return getRuleContext(CodeBlockContext.class,i);
		}
		public List<TerminalNode> Else() { return getTokens(BveMapParser.Else); }
		public TerminalNode Else(int i) {
			return getToken(BveMapParser.Else, i);
		}
		public IfStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifStmt; }
	}

	public final IfStmtContext ifStmt() throws RecognitionException {
		IfStmtContext _localctx = new IfStmtContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_ifStmt);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			match(If);
			setState(92);
			match(LeftParen);
			setState(93);
			((IfStmtContext)_localctx).expr = expr(0);
			((IfStmtContext)_localctx).cond.add(((IfStmtContext)_localctx).expr);
			setState(94);
			match(RightParen);
			setState(95);
			((IfStmtContext)_localctx).codeBlock = codeBlock();
			((IfStmtContext)_localctx).condCode.add(((IfStmtContext)_localctx).codeBlock);
			setState(105);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(96);
					match(Else);
					setState(97);
					match(If);
					setState(98);
					match(LeftParen);
					setState(99);
					((IfStmtContext)_localctx).expr = expr(0);
					((IfStmtContext)_localctx).cond.add(((IfStmtContext)_localctx).expr);
					setState(100);
					match(RightParen);
					setState(101);
					((IfStmtContext)_localctx).codeBlock = codeBlock();
					((IfStmtContext)_localctx).condCode.add(((IfStmtContext)_localctx).codeBlock);
					}
					} 
				}
				setState(107);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Else) {
				{
				setState(108);
				match(Else);
				setState(109);
				((IfStmtContext)_localctx).elseCode = codeBlock();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ForStmtContext extends ParserRuleContext {
		public StmtContext initStmt;
		public ExprContext cond;
		public StmtContext stepStmt;
		public TerminalNode For() { return getToken(BveMapParser.For, 0); }
		public TerminalNode LeftParen() { return getToken(BveMapParser.LeftParen, 0); }
		public List<TerminalNode> Semi() { return getTokens(BveMapParser.Semi); }
		public TerminalNode Semi(int i) {
			return getToken(BveMapParser.Semi, i);
		}
		public TerminalNode RightParen() { return getToken(BveMapParser.RightParen, 0); }
		public CodeBlockContext codeBlock() {
			return getRuleContext(CodeBlockContext.class,0);
		}
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode Long() { return getToken(BveMapParser.Long, 0); }
		public ForStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_forStmt; }
	}

	public final ForStmtContext forStmt() throws RecognitionException {
		ForStmtContext _localctx = new ForStmtContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_forStmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(For);
			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Long) {
				{
				setState(113);
				match(Long);
				}
			}

			setState(116);
			match(LeftParen);
			setState(117);
			((ForStmtContext)_localctx).initStmt = stmt();
			setState(118);
			match(Semi);
			setState(119);
			((ForStmtContext)_localctx).cond = expr(0);
			setState(120);
			match(Semi);
			setState(121);
			((ForStmtContext)_localctx).stepStmt = stmt();
			setState(122);
			match(RightParen);
			setState(123);
			codeBlock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhileStmtContext extends ParserRuleContext {
		public TerminalNode While() { return getToken(BveMapParser.While, 0); }
		public TerminalNode LeftParen() { return getToken(BveMapParser.LeftParen, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RightParen() { return getToken(BveMapParser.RightParen, 0); }
		public CodeBlockContext codeBlock() {
			return getRuleContext(CodeBlockContext.class,0);
		}
		public TerminalNode Long() { return getToken(BveMapParser.Long, 0); }
		public WhileStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whileStmt; }
	}

	public final WhileStmtContext whileStmt() throws RecognitionException {
		WhileStmtContext _localctx = new WhileStmtContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_whileStmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(While);
			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Long) {
				{
				setState(126);
				match(Long);
				}
			}

			setState(129);
			match(LeftParen);
			setState(130);
			expr(0);
			setState(131);
			match(RightParen);
			setState(132);
			codeBlock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FnDefStmtContext extends ParserRuleContext {
		public Token fnName;
		public TerminalNode Function() { return getToken(BveMapParser.Function, 0); }
		public TerminalNode LeftParen() { return getToken(BveMapParser.LeftParen, 0); }
		public ParamDefListContext paramDefList() {
			return getRuleContext(ParamDefListContext.class,0);
		}
		public TerminalNode RightParen() { return getToken(BveMapParser.RightParen, 0); }
		public CodeBlockContext codeBlock() {
			return getRuleContext(CodeBlockContext.class,0);
		}
		public TerminalNode Identifier() { return getToken(BveMapParser.Identifier, 0); }
		public FnDefStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fnDefStmt; }
	}

	public final FnDefStmtContext fnDefStmt() throws RecognitionException {
		FnDefStmtContext _localctx = new FnDefStmtContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_fnDefStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(Function);
			setState(135);
			((FnDefStmtContext)_localctx).fnName = match(Identifier);
			setState(136);
			match(LeftParen);
			setState(137);
			paramDefList();
			setState(138);
			match(RightParen);
			setState(139);
			codeBlock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamListContext extends ParserRuleContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> Comma() { return getTokens(BveMapParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(BveMapParser.Comma, i);
		}
		public ParamListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramList; }
	}

	public final ParamListContext paramList() throws RecognitionException {
		ParamListContext _localctx = new ParamListContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_paramList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LeftParen) | (1L << Plus) | (1L << Minus) | (1L << Not) | (1L << Null) | (1L << Distance) | (1L << Identifier) | (1L << Variable) | (1L << Number) | (1L << StringLiteral))) != 0)) {
				{
				setState(141);
				expr(0);
				}
			}

			setState(150);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Comma) {
				{
				{
				setState(144);
				match(Comma);
				setState(146);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LeftParen) | (1L << Plus) | (1L << Minus) | (1L << Not) | (1L << Null) | (1L << Distance) | (1L << Identifier) | (1L << Variable) | (1L << Number) | (1L << StringLiteral))) != 0)) {
					{
					setState(145);
					expr(0);
					}
				}

				}
				}
				setState(152);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamDefListContext extends ParserRuleContext {
		public List<TerminalNode> Variable() { return getTokens(BveMapParser.Variable); }
		public TerminalNode Variable(int i) {
			return getToken(BveMapParser.Variable, i);
		}
		public List<TerminalNode> Comma() { return getTokens(BveMapParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(BveMapParser.Comma, i);
		}
		public ParamDefListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramDefList; }
	}

	public final ParamDefListContext paramDefList() throws RecognitionException {
		ParamDefListContext _localctx = new ParamDefListContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_paramDefList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Variable) {
				{
				setState(153);
				match(Variable);
				}
			}

			setState(160);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Comma) {
				{
				{
				setState(156);
				match(Comma);
				setState(157);
				match(Variable);
				}
				}
				setState(162);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CodeBlockContext extends ParserRuleContext {
		public TerminalNode LeftBrace() { return getToken(BveMapParser.LeftBrace, 0); }
		public StmtListContext stmtList() {
			return getRuleContext(StmtListContext.class,0);
		}
		public TerminalNode RightBrace() { return getToken(BveMapParser.RightBrace, 0); }
		public CodeBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_codeBlock; }
	}

	public final CodeBlockContext codeBlock() throws RecognitionException {
		CodeBlockContext _localctx = new CodeBlockContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_codeBlock);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(163);
			match(LeftBrace);
			setState(164);
			stmtList();
			setState(165);
			match(RightBrace);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
